hack/spikes/01-buildkit-rootless/03-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: orkano-build-spike
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
